2019-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pvm-val.c (pvm_sizeof): Struct fields now store bit-offsets
	instead of offsets.

2019-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.c (pkl_gen_pr_type_offset): Fix regression.

2019-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.c (pkl_gen_pr_type_array): Convert sbounds in maps
	to bit-offsets.

2019-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.pks (struct_writer): Adapt to bit-offsets.
	(struct_field_writer): Likewise.
	(array_writer): Likewise.

2019-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.pks (struct_mapper): Use bit-offsets for the struct
	offsets.
	(struct_field_mapper): Likewise.
	(handle_struct_field_label): Likewise.
	(off_plus_sizeof): Likewise.

2019-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.pks (array_mapper): Use bit-offsets for the array
	offsets and for sbound.

2019-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.c (pkl_gen_pr_map): Convert map argument to
	bit-offset.
	(pkl_gen_pr_ass_stmt): Likewise.
	(pkl_gen_pr_type_offset): Do not convert to bit-offset.
	(pkl_gen_ps_type_integral): Likewise.
	(pkl_gen_ps_type_string): Likewise.
	* src/pvm.jitter: Remove invalid rot-swap-to-quake rewrite.

2019-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pvm.jitter: Update comments to reflect that peek/poke
	instructions get bit-offsets, not regular offsets.

2019-11-24 John Darrington <john@darrington.wattle.id.au>
            * src/pk-file (pk_file_readable): New function.
            (pk_cmd_load_file): Use it to check files before
            opening.

2019-11-24 John Darrington <john@darrington.wattle.id.au>

	* src/pk-term.c: Remove unnecessary #include <sys/stat.h>

2019-11-28  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke-dg.exp (dg-data): Avoid appending duplicated
	file names to poke_data_files.
	(poke_finish): Fix deleting the temporary files.

2019-11-28  Jose E. Marchesi  <jemarch@gnu.org>